--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -41,6 +41,11 @@
                                     <li><a class="dropdown-item" href="/home">Home</a></li>
                                 </ul>
                             </li>
+                            <% if(sumCtvOrd != 0) {%>
+                            <li class="nav-item">
+                                <h3>Controvalore contratto rimanente: <%= sumCtvOrd%></h3>
+                            </li>
+                            <% } %>
                         </ul>
                     </div>
                 </div>
