--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -40,7 +40,6 @@
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
                                         <li><a class="dropdown-item" href="/home">Home</a></li>
-                                        <li><a class="dropdown-item" href="/order-list-all">Visualizza tutti gli ordini</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -61,9 +60,8 @@
                                     </div>
                                     <% } %>
                                     <div class="col-auto">
-                                        <div class="custom-control custom-checkbox">
-                                            <label class="sr-only" for="inlineFormCage">Visualizza tutti gli ordini</label>
-                                            <input type="checkbox" name="fall" class="custom-control-input" id="inlineFormInputCage">
+                                            <label class="nav-link" for="inlineFormCage">Visualizza storico</label>
+                                            <input type="checkbox" name="fall" id="inlineFormInputCage">
                                         </div>
                                     </div>
                                     <div class="col-auto">
