fix close tag %>

--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -92,8 +92,8 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="http://www.selvertshopping.com/images/products/big/P<%= product.ccod %>.jpg" alt="Immagine non disponibile sul sito selvert! :-(">
                     <div class="card-body">
-                      <h5 class="card-title"><%= product.ccod > - <%= product.iprz></h5>
-                      <p class="card-text"><%= product.xdesc ></p>
+                      <h5 class="card-title"><%= product.ccod %> - <%= product.iprz %></h5>
+                      <p class="card-text"><%= product.xdesc %></p>
                     </div>
                   </div>
             <% } %>    
