add product list

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,6 +56,14 @@
                 <a href="/client-list" class="btn btn-primary btn-lg" role="button">Visualizza</a>
             </div>
         </div>
+        <div class="col-sm-6">
+            <div class="jumbotron">
+                <h4 class="display-6">Lista Prodotti</h4>
+                <hr class="my-6">
+                <p class="lead">Visualizza lista prodotti!</p>
+                <a href="/product-list" class="btn btn-primary btn-lg" role="button">Visualizza</a>
+            </div>
+        </div>
     </div>
     <!--% } %>-->
 </div>
