add euro symbol to product prz

--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -94,7 +94,7 @@
                     <div class="card-body">
                       <h5 class="card-title"><%= product.ccod %></h5>
                       <p class="card-text"><%= product.xdesc %></p>
-                      <a href="#" class="btn btn-primary"><%= product.iprz %></a>
+                      <a href="#" class="btn btn-primary"><i class="material-icons">&#xe926</i><%= product.iprz %></a>
                     </div>
                   </div>
             <% }); %>    
