--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -160,13 +160,13 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon1">Q.ta</span>
                                 </div>
-                                <input type="number" name="iqta" class="form-control" value="<%- products[i].iqta ? <%= products[i].iqta %> : 0 %>">
+                                <input type="number" name="iqta" class="form-control" value="<%- (products[i].iqta) ? products[i].iqta : 0 %>">
                             </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon1">Sconto</span>
                                 </div>
-                                <input type="number" name="psco" class="form-control" value="<%- products[i].psco ? <%= products[i].psco %> : 0 %>">
+                                <input type="number" name="psco" class="form-control" value="<%- (products[i].psco) ? products[i].psco : 0 %>">
                             </div>
                             <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
                                 <i class="material-icons">&#xe854</i>
